--- a/src/app/dialog-add-player/dialog-add-player.component.html
+++ b/src/app/dialog-add-player/dialog-add-player.component.html
@@ -9,5 +9,6 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
+  <button mat-button (click)="onclick()">No Thanks</button>
   <button mat-button [mat-dialog-close]="" cdkFocusInitial>Ok</button>
 </div>
