--- a/src/app/game/game.component.scss
+++ b/src/app/game/game.component.scss
@@ -60,3 +60,10 @@
     right: 32px;
     bottom: 32px;
 }
+
+.pin-bottom {
+    position: absolute;
+    bottom: 32px;
+    left: 200px;
+    right: 300px;
+}
