--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -1,31 +1,29 @@
-
-
-
-
-
-<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px' : 100 + (i * 130)}" [name]="player"
-class="player-position"></app-player>
+<app-player *ngFor="let player of game.players; let i = index;" [ngStyle]="{'top.px' : 50 + (i * 70)}"
+    [playerActive]="i == game.currentPlayer" [name]="player" class="player-position"></app-player>
 
 <div class="field">
 
     <div class="card-stack">
-        
+
         <!-- Card Stack -->
-        <img  *ngFor="let c of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px' : i * 5}"
-        src="/assets/img/cards/card_cover.png" alt="">
-        
+        <img *ngFor="let c of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px' : i * 5}"
+            src="/assets/img/cards/card_cover.png" alt="">
+
         <img (click)="takeCard()" class="top-card" style="right: 21px" src="/assets/img/cards/card_cover.png">
-    
+
         <!-- Stack for played cards-->
         <img *ngFor="let card of game.playedCards" class="played-card" src="/assets/img/cards/{{ card }}.png">
 
         <!-- Current card(Animation) -->
-        <img (click)="takeCard()" *ngIf="pickCardAnimtation" class="pick-card" style="right: 25px" src="/assets/img/cards/{{ currentCard }}.png">
+        <img (click)="takeCard()" *ngIf="pickCardAnimtation" class="pick-card" style="right: 25px"
+            src="/assets/img/cards/{{ currentCard }}.png">
 
     </div>
 
 </div>
 
-<button mat-fab color="primary" (click)="openDialog()" class="btn-add" >
+<app-game-info [card]="currentCard" class="pin-bottom"></app-game-info>
+
+<button mat-fab color="primary" (click)="openDialog()" class="btn-add">
     <mat-icon>add</mat-icon>
-    </button>
+</button>
