--- a/src/app/player/player.component.scss
+++ b/src/app/player/player.component.scss
@@ -11,12 +11,16 @@
         margin-left: 16px;
     }
 
-        background-color: orange;
+        background-color: rgb(100, 100, 100);
 
     img {
-        width: 100px;
-        height: 100px;
+        width: 50px;
+        height: 50px;
         object-fit: cover;
         border-radius: 100%;
     }
+}
+
+.player-active{
+    background-color: orange !important;
 }
