--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -2,7 +2,8 @@
     <img src="assets/img/startbox.png">
 
     <div class="start-label-box">
-        <img (click)="newGame()" src="assets/img/startlabel.png">
+        <!-- <img (click)="newGame()" src="assets/img/startlabel.png"> -->
+        <img routerLink="/game" src="assets/img/startlabel.png">
     </div>
     
 </div>
