--- a/src/app/game/game.component.html
+++ b/src/app/game/game.component.html
@@ -7,16 +7,16 @@
 
         <!-- Card Stack -->
         <img *ngFor="let c of [0,1,2,3]; let i = index;" [ngStyle]="{'right.px' : i * 5}"
-            src="/assets/img/cards/card_cover.png" alt="">
+            src="assets/img/cards/card_cover.png" alt="">
 
-        <img (click)="takeCard()" class="top-card" style="right: 21px" src="/assets/img/cards/card_cover.png">
+        <img (click)="takeCard()" class="top-card" style="right: 21px" src="assets/img/cards/card_cover.png">
 
         <!-- Stack for played cards-->
-        <img *ngFor="let card of game.playedCards" class="played-card" src="/assets/img/cards/{{ card }}.png">
+        <img *ngFor="let card of game.playedCards" class="played-card" src="assets/img/cards/{{ card }}.png">
 
         <!-- Current card(Animation) -->
         <img (click)="takeCard()" *ngIf="pickCardAnimtation" class="pick-card" style="right: 25px"
-            src="/assets/img/cards/{{ currentCard }}.png">
+            src="assets/img/cards/{{ currentCard }}.png">
 
     </div>
 
