--- a/src/app/player/player.component.html
+++ b/src/app/player/player.component.html
@@ -1,4 +1,5 @@
 <div class="player" [class.player-active]="playerActive">
-<img src="/assets/img/profile/1.webp" alt="">
-<span>{{ name }}</span> 
+    
+    <img src="/assets/img/profile/{{ image }}">
+    <span>{{ name }}</span> 
 </div>
