--- a/src/styles.scss
+++ b/src/styles.scss
@@ -2,5 +2,21 @@
 body {
     margin: 0;
 }
-html, body { height: 100%; }
+html, body { 
+    height: 100%; 
+    overflow: hidden;
+}
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
+
+
+@media (max-width: 960px) {
+    .hide-mobile{
+        display: none;
+    }
+}
+
+@media (min-width: 960px) {
+    .hide-desktop{
+        display: none;
+    }
+}
