--- a/src/app/dialog-add-player/dialog-add-player.component.html
+++ b/src/app/dialog-add-player/dialog-add-player.component.html
@@ -9,6 +9,6 @@
   </mat-form-field>
 </div>
 <div mat-dialog-actions>
-  <button mat-button (click)="onclick()">No Thanks</button>
+  <button mat-button (click)="onNoClick()">No Thanks</button>
   <button mat-button [disabled]="name.length == 0" [mat-dialog-close]="name" cdkFocusInitial>Ok</button>
 </div>
