--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -7,6 +7,10 @@
     justify-content: center;
     align-items: center;
 
+    @media (max-width: 960px) {
+        overflow: hidden;
+    }
+
     img {
         height: 100vh;
     }
@@ -24,6 +28,11 @@
     img {
         width: 40vw;
         height: auto;
+
+        @media (max-width: 960px) {
+            width: 400px;
+        }
+        
 
         &:hover {
             filter: brightness(1.2);
