--- a/src/app/start-screen/start-screen.component.html
+++ b/src/app/start-screen/start-screen.component.html
@@ -1,7 +1,10 @@
 <div class="start_screen">
     <img src="assets/img/startbox.png">
 
+    
+
     <div class="start-label-box">
+        <h1 class="description">Drink with your friends <br> as described in the info box.</h1>
         <img (click)="newGame()" src="assets/img/startlabel.png">
     </div>
     
