--- a/src/app/game-info/game-info.component.html
+++ b/src/app/game-info/game-info.component.html
@@ -1,7 +1,7 @@
 <mat-card>
-    <mat-card-title>{{ card ? title : 'Please add all players ->' }}</mat-card-title><!-- title ist die variable. "card ? heist wenn die karte existiert dann zeige variable, sonst zeige..." -->
+    <mat-card-title>{{ card ? title : 'Please add at least two players ->' }}</mat-card-title><!-- title ist die variable. "card ? heist wenn die karte existiert dann zeige variable, sonst zeige..." -->
     <mat-card-content>
-        {{ card ? description : 'and then start picking a cards' }}
+        {{ card ? description : 'Then you can start by clicking on the stack of cards.' }}
     </mat-card-content>
 
 </mat-card>
