--- a/src/app/start-screen/start-screen.component.scss
+++ b/src/app/start-screen/start-screen.component.scss
@@ -22,7 +22,9 @@
     left: 0;
     right: 0;
     display: flex;
+    flex-direction: column;
     justify-content: center;
+    align-items: center;
     bottom: 100px;
 
     img {
@@ -40,3 +42,6 @@
     }
 }
 
+.description{
+    text-align: center;
+}
